# promptttspp

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
data_prep/: .gitignore  README.md  add_style_prompt_tags.py  common.py  compute_utt_stats.py  finalize_mfa.py  prepare_mfa.py  run_mfa.py  runall_mfa.sh  runall_style_prompt_tags.sh
egs/proposed/: preprocess.sh
metadata/: libritts_r_f0_stats.yaml  speaker_prompt_candidates_v230922.csv
promptttspp/datasets/: all_with_spk_prompt_norm.py  prompttts.py  utils.py
promptttspp/layers/: __init__.py  activations.py  embedding.py  norm.py
promptttspp/models/prompttts_mdn_v2_final/: model.py
promptttspp/modules/: cnf.py  conformer.py  convnext.py  denoiser.py  diffusion.py  embedding.py  frame_prior.py  glow.py  mdn.py  mrf.py  prompt_encoder.py  reference_encoder.py  score_sde.py  style_encoder.py  transformer.py  unet.py  variance_adaptor.py
promptttspp/modules/esp/: README.md  __init__.py
promptttspp/modules/esp/conformer/: convolution.py  encoder.py  encoder_layer.py  swish.py
promptttspp/modules/esp/transformer/: add_sos_eos.py  decoder.py  decoder_layer.py  (+11 more)
promptttspp/modules/nnsvs/: denoiser.py  diffusion.py
promptttspp/preprocess/: __init__.py  duration.py  pitch.py  preprocess.py
promptttspp/text/: eng.py
promptttspp/trainers/: tts.py
promptttspp/transforms/: __init__.py  mel.py
promptttspp/utils/: __init__.py  joblib.py  lr_scheduler.py  model.py  seed.py  textgrid.py  tracker.py
promptttspp/vocoders/: __init__.py  bigvgan.py  bigvgan_f0.py  nsf.py
