[build-system]
requires = [
    "wheel",
    "setuptools",
]

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false # TODO: enable mypy in the future
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
[tool.pysen.lint.source]
excludes = [
]
